###########################################################################
#   Copyright (C) masol.li@gmail.com                                      #
#                                                                         #
#  this file is part of WIDE(wware ide)                                   #
###########################################################################

#############################################################################
#
# precomp library
#
#############################################################################

set(PRECOMP_SRCS
    precomp.cpp
   )
add_library(precomp STATIC ${PRECOMP_SRCS})
